refactor: 1차 리뷰